--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,12 @@
 html {
   box-sizing: border-box;
-  background-color: #C9b5Ab;
+  background-color: #C9b5ab;
   color: #222;
   font-family: "PT Serif", serif;
   line-height: 1.5;
 }
-*, *::before, *::after {
+*, *::before, *::after
+{
   box-sizing: inherit;
 }
 body {
